Fix for Kaitain High Threshold edge case (#516)